--- a/src/assets/styles/sass/_layout.sass
+++ b/src/assets/styles/sass/_layout.sass
@@ -30,6 +30,10 @@ body
     display: flex
     flex-direction: row
     align-item: center
+.show-mobile-only
+    display: none
+.show-desktop-only
+    display: block
 @media screen and (min-width: 640px) and (max-width: 1023px) 
     .wrapper
         margin-right: auto /* 1 */
@@ -46,6 +50,13 @@ body
         max-width:  100% /* 2 */
         padding-right: 20px /* 3 */
         padding-left:  20px /* 3 */
+@media screen  and (max-width: 639px) 
+    .show-mobile-only
+        display: block
+    .show-desktop-only
+        display: none
+
+
 
 
 
